force-app/main/default/objects/Product2/fields/Backorderable__c.field-meta.xml
<CustomField>
    <fullName>Backorderable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Backorderable</label>
    <type>Checkbox</type>
</CustomField>