force-app/main/default/objects/Product2/fields/Product_Image_Url__c.field-meta.xml
<CustomField>
    <fullName>Product_Image_Url__c</fullName>
    <label>Product Image Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>