force-app/main/default/objects/Product2/fields/Resto_Site_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Resto_Site_Display_Name__c</fullName>
    <label>Resto Site Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>