force-app/main/default/objects/Product2/fields/Sub_Family__c.field-meta.xml
<CustomField>
    <fullName>Sub_Family__c</fullName>
    <label>Sub Family</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Family</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Solo</fullName>
            </value>
            <value>
                <fullName>With Rice</fullName>
            </value>
            <value>
                <fullName>Unli Rice</fullName>
            </value>
            <value>
                <fullName>Platter</fullName>
            </value>
            <value>
                <fullName>Rice Meal</fullName>
            </value>
            <value>
                <fullName>Paa</fullName>
            </value>
            <value>
                <fullName>Pecho</fullName>
            </value>
            <value>
                <fullName>120G w/ Rice</fullName>
            </value>
            <value>
                <fullName>500G</fullName>
            </value>
            <value>
                <fullName>1KG</fullName>
            </value>
            <value>
                <fullName>Swakto</fullName>
            </value>
            <value>
                <fullName>Mismo</fullName>
            </value>
            <value>
                <fullName>1.5L</fullName>
            </value>
            <value>
                <fullName>350ML</fullName>
            </value>
            <value>
                <fullName>500ML</fullName>
            </value>
            <value>
                <fullName>1L</fullName>
            </value>
            <value>
                <fullName>Dolores Poblacion</fullName>
            </value>
            <value>
                <fullName>Dapdap</fullName>
            </value>
            <value>
                <fullName>Lunang</fullName>
            </value>
            <value>
                <fullName>Salak</fullName>
            </value>
            <value>
                <fullName>Malaintos</fullName>
            </value>
            <value>
                <fullName>Malobago</fullName>
            </value>
            <value>
                <fullName>Pecho - Unli</fullName>
            </value>
            <value>
                <fullName>Paa - Unli</fullName>
            </value>
            <value>
                <fullName>Free</fullName>
            </value>
            <value>
                <fullName>Extra Rice</fullName>
            </value>
            <value>
                <fullName>Chicken Oil</fullName>
            </value>
            <value>
                <fullName>Spice Vinegar</fullName>
            </value>
            <value>
                <fullName>230ML</fullName>
            </value>
            <value>
                <fullName>220ML</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>