force-app/main/default/objects/Product2/fields/Track_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Track_Inventory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Track Inventory</label>
    <type>Checkbox</type>
</CustomField>