force-app/main/default/objects/Product2/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Kilogram</fullName>
            </value>
            <value>
                <fullName>Per Piece</fullName>
            </value>
            <value>
                <fullName>Milliliter</fullName>
            </value>
            <value>
                <fullName>Liter</fullName>
            </value>
            <value>
                <fullName>Gram</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>