force-app/main/default/objects/Product2/listViews/Drinks_Product.listView-meta.xml
<ListView>
    <fullName>Drinks_Product</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Parent_Product__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Sub_Family__c</columns>
    <columns>Bundled__c</columns>
    <columns>Track_Inventory__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Beverages</value>
    </filters>
    <label>Drinks Product</label>
</ListView>