force-app/main/default/objects/Product2/listViews/POS_Products.listView-meta.xml
<ListView>
    <fullName>POS_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Parent_Product__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Sub_Family__c</columns>
    <columns>Bundled__c</columns>
    <columns>Track_Inventory__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Track_Inventory__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>PRODUCT2.NAME</field>
        <operation>contains</operation>
        <value>PARENT</value>
    </filters>
    <label>POS Products</label>
</ListView>